# godot-agents-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  TRAINING_GUIDE.md  check_py_env.py  convert_rllib_to_onnx.py  convert_sb3_to_onnx.py  debug_result.json  demo.py  interface.py  interface_rllib_raw.py  interface_sb3_raw.py  pyproject.toml  requrements.txt  rllib_config.yaml  rllib_training_script.py  simulator.py  stable_baselines3_training_script.py
custom_models/: __init__.py  common.py  rllib_models.py  sb3_policies.py
docs/: !IMPORTANT.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  DOCS.md  QUICK_START.md  TROUBLESHOOTING.md
scripts/: install.sh  rllib_range_validation_test.py  run_interface_capture.sh
src/: app.rs  cli.rs  main.rs  project.rs  ui.rs
src/app/: mod.rs  sessions.rs  state.rs
src/app/config/: mod.rs
src/app/file_browser/: mod.rs
src/app/metrics/: mod.rs
src/app/runs/: mod.rs
src/domain/: mod.rs  projects.rs
src/ui/: layout.rs  mod.rs  root.rs  utils.rs
src/ui/components/: mod.rs  tabs.rs
src/ui/screens/: mod.rs
