[package]
name = "controller-mk2"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.52", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
nix = { version = "0.30.1", features = ["signal"] }
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"
plotters = { version = "0.3.7", features = ["bitmap_backend", "ttf"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false

[package.metadata]
# optional metadata if you want to reference it later
